# fridaylight

./: .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement.yml  question.yml
.github/workflows/: prerelease.yml  release.yml
docs/: COMPILING.md  FAQ.md  METADATA.md  example_metadata.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crash/: PsychEngine_2025-04-06_21'51'22.txt
src-tauri/icons/: icon.icns
src-tauri/resources/data/: codename.json  fps-plus.json  kade.json  nightmarevision.json  pslice.json  psych.json  psychonline.json  vanilla.json
src-tauri/src/: app_handle.rs  commands.rs  download.rs  filesystem.rs  gamebanana.rs  lib.rs  logger.rs  main.rs  models.rs  modenabler.rs  modfiles.rs  modutils.rs  terminaloutput.rs  utils.rs
src/components/: AppSettingsModal.vue  MainContent.vue  Sidebar.vue
src/components/common/: ContextMenu.vue  ContributorInfobox.vue  InstalledModCard.vue  ModCard.vue  ModGrid.vue  SearchBar.vue  TerminalOutput.vue  ThemePreview.vue
src/components/layout/: Sidebar.vue
src/components/modals/: AppSettingsModal.vue  CreateFolderModal.vue  CustomUrlDownloadModal.vue  DownloadFileSelector.vue  EditFolderModal.vue  EngineModDetailsModal.vue  EngineSelectionDialog.vue  FolderExistsDialog.vue  MessageDialog.vue  ModDetailsModal.vue  ModSettingsModal.vue  ModTypeSelectionModal.vue  ProfileCreateDialog.vue
src/components/mods/: CreateFolderModal.vue  DownloadFileSelector.vue  EngineDownloadButtons.vue  EngineModsList.vue  EngineSelectionDialog.vue  FeaturedModsCarousel.vue  FolderListItem.vue  GameBananaBrowser.vue  HomePage.vue  ModBanner.vue  ModDetails.vue  ModList.vue  ModListItem.vue  ModSettingsModal.vue
src/components/mods/list/: DownloadListItem.vue  EngineModListItem.vue  FolderListItem.vue  ModListItem.vue
src/components/skeletons/: SkeletonInstalledModCard.vue  SkeletonModCard.vue
src/composables/: useLocale.ts  useModDownload.ts
src/locales/: en.json  ru.json  tr.json  ua.json
src/quasar/: variables.scss
src/router/: index.ts
src/services/: dbService.ts  gamebananaService.ts  notificationService.ts  storeService.ts  themeService.ts
src/stores/: downloadState.ts
src/themes/: boo.css  corruption.css  dark.css  doe.css  garcello.css  hotline.css  light.css  pump.css  qt.css  shaggy.css  yourself.css
src/types/: gamebanana.ts  index.ts
src/utils/: index.ts
