[package]
name = "fridaylight"
version = "0.4.0"
description = "a Friday Night Funkin mod loader"
authors = ["echolotl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fnfml_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4", features = ["v4"] }
tauri-plugin-dialog = "2"
ico = "0.3.0"
base64 = "0.21.0"
image = "0.24.6"
winapi = { version = "0.3.9", features = ["winuser", "shellapi"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
simplelog = "0.12"
zip = "0.6"
futures-util = "0.3.31"
bytes = "1.10.1"
sevenz-rust = "0.5.3"
unrar = "0.5.2"
roxmltree = "0.20.0"
windows-version = "0.1.0"
tauri-plugin-deep-link = "2"

