[package]
name = "fridaylight"
version = "0.11.2"
description = "a Friday Night Funkin mod loader"
authors = ["echolotl"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fnfml_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.16.0", features = ["v4"] }
tauri-plugin-dialog = "2"
ico = "0.4.0"
base64 = "0.22.1"
image = "0.25.6"
winapi = { version = "0.3.9", features = ["winuser", "shellapi"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11.8"
simplelog = "0.12"
zip = "4.1.0"
futures-util = "0.3.31"
bytes = "1.10.1"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
roxmltree = "0.20.0"
windows-version = "0.1.0"
tauri-plugin-deep-link = "2"
lazy_static = "1.5.0"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
regex = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = {version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"

